  * Add hint about ~activation-fn~ for unsupported buffers.
  * Add Roc support
  * Add support for environment variables in rust analyzer runnables. Allowing the new ~Update Tests (Expect)~ code lens to work as expected.
  * Add support for [[https://github.com/mathworks/MATLAB-language-server][MATLAB language server]] (requires [[https://github.com/MathWorks/Emacs-MATLAB-Mode][matlab-mode]]).

** 9.0.0
  * Add language server config for QML (Qt Modeling Language) using qmlls.
  * Add new configuration options for lsp-html. Now able to toggle documentation hovers. Custom data is no longer experimental, and is now a vector.
  * Add support for RPM spec files
  * Add support for installing lsp dependencies via Cargo.
  * Fix tramp support issues (see [[https://github.com/emacs-lsp/lsp-mode/pull/4204][#4204]])
  * Add Cypher support.
  * Add Mojo 🔥 support
  * Add lsp-solidity, using the implementation from NomicFoundation
  * Change rust-analyzer base URL to be github.com/rust-lang/rust-analyzer, rather than rust-analyzer/rust-analyzer.
  * Add support for wgsl using [[https://github.com/wgsl-analyzer/wgsl-analyzer][wgsl-analyzer]]
  * Add [[https://github.com/wader/jq-lsp][jq-lsp]]
  * Add architecture triples for [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] file downloads, to support macos on ARM and X86.
  * Add semantic token support for [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] in lsp-erlang client.
  * Update [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] download file names to match new upstream names.
  * Add [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] support in lsp-erlang client.
  * Add [[https://github.com/elixir-tools/credo-language-server][credo-language-server]]
  * Add support for clojure-ts-mode in clojure-lsp client